--- a/common/modules/pkgselect/pkgselect.ui
+++ b/common/modules/pkgselect/pkgselect.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Package Selection</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QRadioButton {
@@ -28,7 +28,53 @@ QLabel {
 }</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="13" column="1">
+   <item row="11" column="1">
+    <widget class="QLabel" name="additional_label">
+     <property name="font">
+      <font>
+       <pointsize>18</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">padding-left: 0px; padding-right: 0px;</string>
+     </property>
+     <property name="text">
+      <string>Additional Options</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <spacer name="left_spacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLabel" name="normal_text">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>Web browser, utilities, office software, games, and media players</string>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="1">
     <widget class="QCheckBox" name="updates_button">
      <property name="maximumSize">
       <size>
@@ -46,13 +92,13 @@ QLabel {
      </property>
     </widget>
    </item>
-   <item row="0" column="2">
-    <spacer name="right_spacer">
+   <item row="0" column="1">
+    <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Minimum</enum>
+      <enum>QSizePolicy::Fixed</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -62,21 +108,8 @@ QLabel {
      </property>
     </spacer>
    </item>
-   <item row="10" column="1">
-    <widget class="QLabel" name="minimal_text">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <italic>true</italic>
-      </font>
-     </property>
-     <property name="text">
-      <string>Only the desktop environment</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QRadioButton" name="full_button">
+   <item row="8" column="1">
+    <widget class="QRadioButton" name="minimal_button">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -89,73 +122,7 @@ QLabel {
       </font>
      </property>
      <property name="text">
-      <string>Full Installation</string>
-     </property>
-    </widget>
-   </item>
-   <item row="16" column="1">
-    <widget class="QLabel" name="extraparty_text">
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">padding-left: 0px; padding-right: 0px;</string>
-     </property>
-     <property name="text">
-      <string>Install additional third-party packages</string>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="1">
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="17" column="1">
-    <spacer name="verticalSpacer_11">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>3</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="12" column="1">
-    <widget class="QLabel" name="additional_label">
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">padding-left: 0px; padding-right: 0px;</string>
-     </property>
-     <property name="text">
-      <string>Additional Options</string>
+      <string>Minimal Installation</string>
      </property>
     </widget>
    </item>
@@ -180,10 +147,13 @@ QLabel {
      </property>
     </widget>
    </item>
-   <item row="20" column="1">
-    <spacer name="pushup">
+   <item row="21" column="1">
+    <spacer name="stretch_spacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -192,80 +162,6 @@ QLabel {
       </size>
      </property>
     </spacer>
-   </item>
-   <item row="4" column="1">
-    <spacer name="verticalSpacer_5">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>10</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="7" column="1">
-    <widget class="QLabel" name="normal_text">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <italic>true</italic>
-      </font>
-     </property>
-     <property name="text">
-      <string>Web browser, utilities, office software, games, and media players</string>
-     </property>
-    </widget>
-   </item>
-   <item row="15" column="1">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="full_text">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <italic>true</italic>
-      </font>
-     </property>
-     <property name="text">
-      <string>All applications in the Normal Installation, and all extra third-party packages listed below</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-     </property>
-    </widget>
-   </item>
-   <item row="14" column="1">
-    <widget class="QLabel" name="updates_text">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-       <italic>true</italic>
-      </font>
-     </property>
-     <property name="text">
-      <string>This saves time after installation, and keeps your system secure</string>
-     </property>
-    </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLabel" name="apps_label">
@@ -284,8 +180,8 @@ QLabel {
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <spacer name="left_spacer">
+   <item row="0" column="2">
+    <spacer name="right_spacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -300,24 +196,8 @@ QLabel {
      </property>
     </spacer>
    </item>
-   <item row="8" column="1">
-    <spacer name="verticalSpacer_6">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>10</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="9" column="1">
-    <widget class="QRadioButton" name="minimal_button">
+   <item row="2" column="1">
+    <widget class="QRadioButton" name="full_button">
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -330,27 +210,71 @@ QLabel {
       </font>
      </property>
      <property name="text">
-      <string>Minimal Installation</string>
+      <string>Full Installation</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <spacer name="verticalSpacer">
+   <item row="18" column="1">
+    <widget class="QScrollArea" name="extraparty_scroll">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="extraparty_scrollhouse">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>758</width>
+        <height>174</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="packages_layout"/>
+     </widget>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLabel" name="full_text">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>All applications in the Normal Installation, and all extra third-party packages listed below</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+   </item>
+   <item row="20" column="1">
+    <spacer name="pushup">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>20</height>
+       <height>40</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="21" column="1">
+   <item row="9" column="1">
+    <widget class="QLabel" name="minimal_text">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>Only the desktop environment</string>
+     </property>
+    </widget>
+   </item>
+   <item row="19" column="0" colspan="3">
     <widget class="QLabel" name="mandatory_warning_label">
      <property name="font">
       <font>
@@ -361,244 +285,41 @@ QLabel {
       </font>
      </property>
      <property name="text">
-      <string>Note: Ubuntu and flavors are NOT responsible for third-party software installed from this list.</string>
+      <string>Note: MamoLinux and flavors are NOT responsible for third-party software installed from this list.</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="18" column="1" rowspan="2">
-    <widget class="QScrollArea" name="extraparty_scroll">
-     <property name="widgetResizable">
-      <bool>true</bool>
+   <item row="15" column="1">
+    <widget class="QLabel" name="extraparty_text">
+     <property name="font">
+      <font>
+       <pointsize>18</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
      </property>
-     <widget class="QWidget" name="extraparty_scrollhouse">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-31</y>
-        <width>744</width>
-        <height>308</height>
-       </rect>
-      </property>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="9" column="1">
-        <spacer name="virtmanager_spacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="15" column="1">
-        <spacer name="telegram_pacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="3" column="1">
-        <widget class="QCheckBox" name="thunderbird_button">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>21</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Thunderbird</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QLabel" name="thunderbird_text">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <italic>true</italic>
-          </font>
-         </property>
-         <property name="text">
-          <string>Email, newsfeed, chat, and calendaring client</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLabel" name="element_text">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <italic>true</italic>
-          </font>
-         </property>
-         <property name="text">
-          <string>Matrix-based end-to-end encrypted messenger and secure collaboration app</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="1">
-        <widget class="QLabel" name="virtmanager_text">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <italic>true</italic>
-          </font>
-         </property>
-         <property name="text">
-          <string>Desktop user interface for managing virtual machines through libvirt</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="1">
-        <widget class="QCheckBox" name="skype_button">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>21</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Skype</string>
-         </property>
-        </widget>
-       </item>
-       <item row="13" column="1">
-        <widget class="QCheckBox" name="telegram_button">
-         <property name="text">
-          <string>Telegram</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QCheckBox" name="element_button">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>21</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Element</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <spacer name="element_spacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="12" column="1">
-        <spacer name="skype_spacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="7" column="1">
-        <widget class="QCheckBox" name="virtmanager_button">
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>21</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Virtual Machine Manager</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="1">
-        <spacer name="thunderbird_spacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="11" column="1">
-        <widget class="QLabel" name="skype_text">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-           <italic>true</italic>
-          </font>
-         </property>
-         <property name="text">
-          <string>Connect, Create, Talk &amp; Discover, now with Bing GPT-4</string>
-         </property>
-        </widget>
-       </item>
-       <item row="14" column="1">
-        <widget class="QLabel" name="telegram_text">
-         <property name="text">
-          <string>Fast and secure messaging application</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <spacer name="horizontalSpacer_12">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>5</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
+     <property name="styleSheet">
+      <string notr="true">padding-left: 0px; padding-right: 0px;</string>
+     </property>
+     <property name="text">
+      <string>Install additional third-party packages</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="1">
+    <widget class="QLabel" name="updates_text">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+       <italic>true</italic>
+      </font>
+     </property>
+     <property name="text">
+      <string>This saves time after installation, and keeps your system secure</string>
+     </property>
     </widget>
    </item>
   </layout>
